--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.main.allow-circular-references=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #hibernate.dialect.storage_engine=innodb
 #spring.jpa.database-platform:org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 #JPA logging
 logging.level.org.hibernate.SQL=DEBUG
